:see_no_evil: update

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-.ipynb_checkpoints/README-checkpoint.md
-.ipynb_checkpoints/sklearn-checkpoint.ipynb
-.vscode/settings.json
+.ipynb_checkpoints
 .vscode
